--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,9 +7,20 @@
     <title>Responsive Layout</title>
 </head>
 <body>
-<h1>Responsive Layout</h1>
-
-<div class="row">
+<h1>Solution of chapter 2 of the coursera-course</h1>
+<section class="col-lg-4 col-md-6">
+    <header>Headline1</header>
+    this is the text of the section 1
+</section>
+<section class="col-lg-4 col-md-6">
+    <header>Headline2</header>
+    this is the text of the section 2
+</section>
+<section class="col-lg-4 col-md-12">
+    <header>Headline3</header>
+    this is the text of the section 3
+</section>
+<!--div class="row">
     <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
     <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
     <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
@@ -18,7 +29,7 @@
     <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
     <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
     <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
-</div>
+</div-->
 
 </body>
 </html>
