--- a/web/index.html
+++ b/web/index.html
@@ -8,28 +8,53 @@
 </head>
 <body>
 <h1>Solution of chapter 2 of the coursera-course</h1>
-<section class="col-lg-4 col-md-6">
-    <header>Headline1</header>
-    this is the text of the section 1
-</section>
-<section class="col-lg-4 col-md-6">
-    <header>Headline2</header>
-    this is the text of the section 2
-</section>
-<section class="col-lg-4 col-md-12">
-    <header>Headline3</header>
-    this is the text of the section 3
-</section>
-<!--div class="row">
-    <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-    <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
-</div-->
+<div class="col-lg-4 col-md-12">
+    <section class="col-lg-4 col-md-6">
+        <header id="firstHeader">Headline1</header>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+        aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    </section>
+</div>
+
+    <div class="col-lg-4 col-md-12">
+        <section class="col-lg-4 col-md-6">
+            <header id="secondHeader">Headline2</header>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </section>
+    </div>
+    <div class="col-lg-4 col-md-12">
+        <section>
+            <header id="thirdHeader">Headline3</header>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </section>
+    </div>
+    <!--div class="row">
+        <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
+        <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+    </div-->
 
 </body>
 </html>
