--- a/web/index.html
+++ b/web/index.html
@@ -4,57 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/responsive.css">
-    <title>Responsive Layout</title>
+    <title>Responsive Layout Solution of chapter 2 of the coursera-course</title>
 </head>
 <body>
 <h1>Solution of chapter 2 of the coursera-course</h1>
-<div class="col-lg-4 col-md-12">
-    <section class="col-lg-4 col-md-6">
-        <header id="firstHeader">Headline1</header>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-        aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </section>
+<div class="row" id="the-menu">
+    <div class="column" id="colum1">
+        <h2 id="hchicken">Chicken</h2>
+        <p id="chiken">This is the chicken menu where we have a lot of wonderful chicken dishes for you to sample. These are the greatest Chicken dishes, we have many customers who say they are tremendous chicken dishes, and they are tremendous.</p>
+    </div>
+    <div class="column" id="colum2">
+        <h2 id="hbeef">Beef</h2>
+        <p id="beef">This is the Beef menu, let me tell you our beef is the greatest beef, it is tremendous. The beef is so tremendous you will eat anything on this menu and you will say to all of your friends that it was the best beef you ever had. Tremendous.</p>
+    </div>
+    <div class="column" id="colum3">
+        <h2 id="hlamb">Lamb</h2>
+        <p id="lamb">This is the Lamb menu and I must say we have the finest lamb, we have many tremendous customers who say this is the best lamb ever. Do you want to know why it's the best lamb ever? It's so tremendous, that is why it is the best.</p>
+    </div>
 </div>
-
-    <div class="col-lg-4 col-md-12">
-        <section class="col-lg-4 col-md-6">
-            <header id="secondHeader">Headline2</header>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </section>
-    </div>
-    <div class="col-lg-4 col-md-12">
-        <section>
-            <header id="thirdHeader">Headline3</header>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </section>
-    </div>
-    <!--div class="row">
-        <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-        <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
-    </div-->
-
 </body>
 </html>
